changed usage of UIElement name; some more content classes